Реализовал всплывающее окно для подтверждения выхода